--- a/Develop/index.html
+++ b/Develop/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+    <!--Navigation Bar and Anchor Elements-->
     <div class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
         <div>
@@ -24,30 +25,43 @@
             </ul>
         </div>
     </div>
+    <!--Hero-->
     <div class="hero"></div>
+    <!--Content Bars-->
     <div class="content">
         <div id="search-engine-optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" alt= "desk with notebook , pencils , a laptop and  cup of coffee" class="float-left" />
             <h2>Search Engine <br/> Optimization</h2>
             <p>
-                The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
+                The dominance of mobile internet use means that users are <br/>
+                 searching for the right business as they travel, shop, or sit on their <br/>
+                  couch at home. Search Engine Optimization (SEO) allows you to <br/>
+                   increase your visibility and find the right customers for your business.
             </p>
         </div>
         <div id="online-reputation-management" class="online-reputation-management">
             <img src="./assets/images/online-reputation-management.jpg" alt= "person using laptop on desk with chart of increasing reputation displayed" class="float-right" />
             <h2>Online Reputation <br/> Management</h2>
             <p>
-                The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
+                The web is full of opinions, and some of these can be negative. <br/>
+                 Social media allows anyone with an internet connection to say <br/>
+                  whatever they want about your business. Online Reputation <br/>
+                   Management gives you the control over what potential customers <br/>
+                    see when they search for your business.
             </p>
         </div>
         <div id="social-media-marketing" class="social-media-marketing">
             <img src="./assets/images/social-media-marketing.jpg" alt= "Table of people litered with terms on social media such as like,tweet,share" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
-                Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
+                Social media continues to have a sizable influence on buying habits. <br/>
+                 Social media marketing helps you determine which platforms are <br/>
+                  suited to your brand, using analytics to find the right markets and <br/>
+                   increase your lead generation.
             </p>
         </div>
     </div>
+    <!--Side Banner-->
     <div class="benefits">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
@@ -71,6 +85,7 @@
             </p>
         </div>
     </div>
+    <!--Footer-->
     <div class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
