--- a/Develop/index.html
+++ b/Develop/index.html
@@ -31,12 +31,12 @@
     <section class="content">
         <div id="search-engine-optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" alt= "desk with notebook , pencils , a laptop and  cup of coffee" class="float-left" />
-            <h2>Search Engine <br/> Optimization</h2>
+            <h2> Search Engine <br/> Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are <br/>
                  searching for the right business as they travel, shop, or sit on their <br/>
                   couch at home. Search Engine Optimization (SEO) allows you to <br/>
-                   increase your visibility and find the right customers for your business.
+                   increase your visibility and find the right customers for your <br/> business.
             </p>
         </div>
         <div id="online-reputation-management" class="online-reputation-management">
@@ -67,21 +67,26 @@
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt=""/>
             <p>
-                Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
+                Inbound strategies for lead <br/> generation require less work <br/>
+                for your business, bringing <br/> customers directly to your website.
             </p>
         </div>
         <div class="benefit-brand benefit-content">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" alt=""/>
             <p>
-                Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
+                Users find your business <br/>
+                 through paid and organic <br/> searches, increasing the <br/>
+                 search ranking and visibility <br/> for your business.
             </p>
         </div>
         <div class="benefit-cost benefit-content">
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png" alt="" ></img>
             <p>
-                As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
+                As the search ranking for <br/>
+                 your business increases, your <br/>
+                  advertising costs decrease, <br/> and you no longer need to advertise your page.
             </p>
         </div>
     </section>
