--- a/Develop/index.html
+++ b/Develop/index.html
@@ -9,9 +9,9 @@
 
 <body>
     <!--Navigation Bar and Anchor Elements-->
-    <section class="header">
+    <header>
         <h1>Hori<span class="seo">seo</span>n</h1>
-        <div>
+        <div class=navbar>
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -24,7 +24,7 @@
                 </li>
             </ul>
         </div>
-    </section>
+    </header>
     <!--Hero-->
     <section class="hero"></section>
     <!--Content Bars-->
